--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -118,7 +118,7 @@
                                     ${(order.service.serviceStatus == 'COMPLETED') ? 'btn-success' : 'btn-danger'}"
                                     data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu">
-                                <form class="row g-3" action="#" th:action="@{/change-service-status}" th:object="${order}" method="post">
+                                <form action="#" th:action="@{/change-service-status}" th:object="${order}" method="post">
                                     <li><input type="hidden" name="id" th:value="*{orderId}"></li>
                                     <li><input class="dropdown-item" type="submit" name="serviceStatus" value="PENDING"></li>
                                     <li><input class="dropdown-item" type="submit" name="serviceStatus" value="COMPLETED"></li>
@@ -165,8 +165,11 @@
                                     ${(order.payment.paymentStatus == 'PAID') ? 'btn-success' : 'btn-danger'}"
                                     data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Paid</a></li>
-                                <li><a class="dropdown-item" href="#">Unpaid</a></li>
+                                <form action="#" th:action="@{/change-payment-status}" th:object="${order}" method="post">
+                                    <li><input type="hidden" name="id" th:value="*{orderId}"></li>
+                                    <li><input class="dropdown-item" type="submit" name="paymentStatus" value="PAID"></li>
+                                    <li><input class="dropdown-item" type="submit" name="paymentStatus" value="UNPAID"></li>
+                                </form>
                             </ul>
                         </div>
                         <!-- Modal -->
