Refactored the orders url

--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="/employees">Employee</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/orders">Orders</a>
+                    <a class="nav-link" href="/orders/pending">Orders</a>
                 </li>
             </ul>
             <div class="dropdown">
