--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -49,7 +49,7 @@
             </table>
         </div>
         <div>
-            <a class="btn btn-outline-secondary" href="/orders"><i class="fa-solid fa-arrow-left"></i> Back</a>
+            <a class="btn btn-outline-secondary" href="/orders/pending"><i class="fa-solid fa-arrow-left"></i> Back</a>
         </div>
     </div>
 </div>
