Refactored uri changes

--- a/src/main/resources/templates/employee/save-emp-info.html
+++ b/src/main/resources/templates/employee/save-emp-info.html
@@ -20,7 +20,7 @@
       <div>
           <div
                   th:replace="~{frags/emp-frags.html :: emp-save-form(isAccountAllowed='false', isBtnSAllowed='true',
-                  actionLink='/save-emp-info')}"></div>
+                  actionLink='save-emp-info')}"></div>
       </div>
     </div>
   </div>
