--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -21,7 +21,7 @@
       <div>
         <div
                 th:replace="~{frags/emp-frags.html :: emp-save-form(isAccountAllowed='true', isBtnSAllowed='true',
-                  actionLink='/save-employee')}"></div>
+                  actionLink='save-employee')}"></div>
       </div>
     </div>
   </div>
