--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -61,7 +61,7 @@
     </div>
     <div th:if="${isBtnSAllowed}">
         <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-        <a class="btn btn-outline-danger" href="/employees"><i class="fa-solid fa-ban"></i> Cancel</a>
+        <a class="btn btn-outline-danger" href="view"><i class="fa-solid fa-ban"></i> Cancel</a>
     </div>
 </form>
 </body>
