--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -17,7 +17,7 @@
       <h2 class="text-center">Roles</h2>
     </div>
     <div class="mb-3">
-      <form action="#" th:action="@{/save-role}" th:object="${role}" method="post">
+      <form action="#" th:action="@{save-role}" th:object="${role}" method="post">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="New role name" th:field="*{name}">
           <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
@@ -30,7 +30,7 @@
         <tbody>
         <tr th:each="role : ${roles}">
           <td>
-            <form action="#" th:action="@{/save-role}" th:object="${role}" method="post">
+            <form action="#" th:action="@{save-role}" th:object="${role}" method="post">
             <div class="input-group mb-3">
               <input type="text" class="form-control" th:id="field-+${role.roleId}" name="name" th:value="${role.name}"
               disabled>
@@ -39,7 +39,7 @@
               <button th:id="field-+${role.roleId}+-close" class="btn btn-outline-danger" style="display:none"
                  th:attr="onclick=|closeUpdate('${role.roleId}')|">X</button>
               <button class="btn btn-outline-danger"
-                 th:attr="onclick=|confirmDelete('/delete-role?id=${role.roleId}')|">
+                 th:attr="onclick=|confirmDelete('delete-role?id=${role.roleId}')|">
                 <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
             </div>
             </form>
@@ -49,7 +49,7 @@
       </table>
     </div>
     <div>
-      <a class="btn btn-outline-secondary" href="/employees"><i class="fa-solid fa-arrow-left"></i> Back</a>
+      <a class="btn btn-outline-secondary" href="/employees/view"><i class="fa-solid fa-arrow-left"></i> Back</a>
     </div>
   </div>
 </div>
