--- a/src/main/resources/templates/employee/save-emp-account.html
+++ b/src/main/resources/templates/employee/save-emp-account.html
@@ -18,7 +18,7 @@
                 <h2 class="text-center mb-3">Save account</h2>
             </div>
             <div>
-                <form class="row g-3" action="#" th:action="@{/save-emp-account}" th:object="${account}" method="post">
+                <form class="row g-3" action="#" th:action="@{save-emp-account}" th:object="${account}" method="post">
                     <input type="hidden" th:field="*{accountId}">
                     <input type="hidden" th:value="${employeeId}" name="employeeId">
                     <div class="col-md-12 row g-3">
@@ -35,7 +35,7 @@
                     </div>
                     <div>
                         <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-                        <a class="btn btn-outline-danger" href="/employees"><i class="fa-solid fa-ban"></i> Cancel</a>
+                        <a class="btn btn-outline-danger" href="view"><i class="fa-solid fa-ban"></i> Cancel</a>
                     </div>
                 </form>
             </div>
