--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="/employees">Employee</a>
+                    <a class="nav-link" href="/employees/view">Employee</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/orders/pending">Orders</a>
