FIXED: Added new role link not working

--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -31,7 +31,7 @@
                         th:text="${role.name}"
                 ></option>
             </select>
-            <a class="btn btn-outline-primary" href="/add-role" role="button">Add new role</a>
+            <a class="btn btn-outline-primary" href="roles/view" role="button">Add new role</a>
         </div>
     </div>
     <div class="col-md-4">
