Changed back link into dynamic

--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -67,7 +67,7 @@
       </table>
     </div>
     <div>
-      <a class="btn btn-outline-secondary" href="/employees/view"><i class="fa-solid fa-arrow-left"></i> Back</a>
+      <button class="btn btn-outline-secondary" onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Back</button>
     </div>
   </div>
 </div>
