--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -8,24 +8,25 @@
 <form th:fragment="emp-save-form(isAccountAllowed, isBtnSAllowed, actionLink)"  class="row g-3" action="#" th:action="@{${actionLink}}" th:object="${employee}" method="post">
     <input type="hidden" th:field="*{employeeId}">
     <div class="col-md-6 form-floating mb-3">
-        <input type="text" class="form-control" id="fullName" th:field="*{fullName}" placeholder="Venkatappa Raju">
+        <input type="text" class="form-control" id="fullName" th:field="*{fullName}" placeholder="Venkatappa Raju" required>
         <label for="fullName">Full name</label>
         <p th:if="${#fields.hasErrors('fullName')}" th:errorclass="error" th:errors="*{fullName}"></p>
     </div>
     <div class="col-md-6 form-floating mb-3">
-        <input type="number" class="form-control" id="phoneNumber" placeholder="9848032919" th:field="*{phoneNo}">
+        <input type="number" class="form-control" id="phoneNumber" placeholder="9848032919" th:field="*{phoneNo}" required>
         <label for="phoneNumber">Phone number</label>
         <p th:if="${#fields.hasErrors('phoneNo')}" th:errorclass="error" th:errors="*{phoneNo}"></p>
     </div>
     <div class="col-md-12 form-floating mb-3">
-        <input type="email" class="form-control" id="emailAddress" placeholder="venkatapparaju@email.com" th:field="*{emailAddress}">
+        <input type="email" class="form-control" id="emailAddress" placeholder="venkatapparaju@email.com" th:field="*{emailAddress}"
+        required>
         <label for="emailAddress">Email address</label>
         <p th:if="${#fields.hasErrors('emailAddress')}" th:errorclass="error" th:errors="*{emailAddress}"></p>
     </div>
     <div class="col-md-8">
         <div class="input-group mb-3">
             <label class="input-group-text" for="select-role">Role</label>
-            <select class="form-select" id="select-role" th:field="*{role}">
+            <select class="form-select" id="select-role" th:field="*{role}" required>
                 <option th:each="role : ${roles}"
                         th:value="${role.roleId}"
                         th:text="${role.name}"
@@ -35,9 +36,9 @@
         </div>
     </div>
     <div class="col-md-4">
-        <input type="radio" class="btn-check" id="male-gender" th:field="*{gender}" th:value="Male" checked>
+        <input type="radio" class="btn-check" id="male-gender" th:field="*{gender}" th:value="Male" checked required>
         <label class="btn btn-outline-primary" for="male-gender"><i class="fa-solid fa-mars"></i> Male</label>
-        <input type="radio" class="btn-check" id="female-gender" th:field="*{gender}" th:value="Female">
+        <input type="radio" class="btn-check" id="female-gender" th:field="*{gender}" th:value="Female" required>
         <label class="btn btn-outline-primary" for="female-gender"><i class="fa-solid fa-venus"></i> Female</label>
         <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
     </div>
