--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -49,7 +49,7 @@
       </table>
     </div>
     <div>
-      <a class="btn btn-outline-secondary" href="/orders/pending"><i class="fa-solid fa-arrow-left"></i> Back</a>
+      <button class="btn btn-outline-secondary" onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Back</button>
     </div>
   </div>
 </div>
