Refactored service type uri & added toast alert

--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -52,7 +52,7 @@
                             th:value="${serviceType.id}"
                             th:text="${serviceType.name}"></option>
                   </select>
-                  <a class="btn btn-outline-primary" href="/service-types">Service types</a>
+                  <a class="btn btn-outline-primary" href="service-types/view">Service types</a>
               </div>
             </div>
             <div class="col-lg-6 col-md-12 mb-3">
