--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -17,7 +17,7 @@
       <h2 class="text-center">Service types</h2>
     </div>
     <div class="mb-3">
-      <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
+      <form action="#" th:action="@{save-service-type}" th:object="${serviceType}" method="post">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="New service type" th:field="*{name}">
           <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
@@ -30,19 +30,39 @@
         <tbody>
         <tr th:each="serviceType : ${serviceTypes}">
           <td>
-            <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
             <div class="input-group mb-3">
-              <input type="text" class="form-control" th:id="field-+${serviceType.id}" name="name" th:value="${serviceType.name}"
-                     disabled>
-              <button class="btn btn-outline-success" th:attr="onclick=|openUpdate('${serviceType.id}')|">
+              <input type="text" class="form-control" th:value="${serviceType.name}" disabled>
+              <button class="btn btn-outline-success" data-bs-toggle="modal" type="button"
+                      th:attr="data-bs-target=|#service-type-${serviceType.id}-update-modal|">
                 <i class="fa-solid fa-pen-to-square"></i> Update</button>
-              <button th:id="field-+${serviceType.id}+-close" class="btn btn-outline-danger" style="display:none"
-                 th:attr="onclick=|closeUpdate('${serviceType.id}')|">X</button>
               <button class="btn btn-outline-danger"
-                 th:attr="onclick=|confirmDelete('/delete-service-type?id=${serviceType.id}')|">
+                      th:attr="onclick=|confirmDelete('delete-service-type?id=${serviceType.id}')|">
                 <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
             </div>
-            </form>
+            <!-- Modal -->
+            <div class="modal fade" tabindex="-1" th:id="service-type-+${serviceType.id}+-update-modal" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5">Update service type</h1>
+                  </div>
+                  <div class="modal-body">
+                    <form th:id="service-type-+${serviceType.id}+-update-form" action="#" th:action="@{save-service-type}"
+                          th:object="${serviceType}" method="post">
+                      <input type="hidden" name="id" th:value="${serviceType.id}">
+                      <input type="text" class="form-control" th:id="field-+${serviceType.id}" name="name"
+                             th:value="${serviceType.name}">
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-primary" type="submit"
+                            th:attr="onClick=|submitForm('service-type-${serviceType.id}-update-form')|">Update</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Modal ends -->
           </td>
         </tr>
         </tbody>
@@ -53,5 +73,14 @@
     </div>
   </div>
 </div>
+<div th:replace="~{frags/general-frags.html :: alertToast}"></div>
+<script th:inline="javascript">
+/*<![CDATA[*/
+    let alertMessage = /*[[${alertMessage}]]*/
+    if (alertMessage) {
+        showAlertToast(alertMessage);
+    }
+  /*]]>*/
+</script>
 </body>
 </html>
