--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -14,7 +14,7 @@
     <div class="row g-3">
         <div class="mb-3">
             <a class="btn btn-outline-primary btn-sm" href="add-order">Add order</a>
-            <a class="btn btn-outline-primary btn-sm" href="/service-types">Service types</a>
+            <a class="btn btn-outline-primary btn-sm" href="service-types/view">Service types</a>
             <a class="btn btn-outline-primary btn-sm" href="/dimensions">Dimensions</a>
         </div>
         <div>
