Refactored dimensions uri & added toast alert

--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -63,7 +63,7 @@
                             th:value="${dimension.id}"
                             th:text="${dimension.name}"></option>
                   </select>
-                  <a class="btn btn-outline-primary" href="/dimensions">Dimensions</a>
+                  <a class="btn btn-outline-primary" href="dimensions/view">Dimensions</a>
               </div>
             </div>
             <div class="col-md-4 form-floating mb-3">
