--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -15,7 +15,7 @@
         <div class="mb-3">
             <a class="btn btn-outline-primary btn-sm" href="add-order">Add order</a>
             <a class="btn btn-outline-primary btn-sm" href="service-types/view">Service types</a>
-            <a class="btn btn-outline-primary btn-sm" href="/dimensions">Dimensions</a>
+            <a class="btn btn-outline-primary btn-sm" href="dimensions/view">Dimensions</a>
         </div>
         <div>
             <ul class="nav nav-tabs">
