Added pagination for employee

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -54,6 +54,16 @@
             </tbody>
         </table>
     </div>
+    <nav th:fragment="pageBar">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
+                <a class="page-link" href="view?page=0">Start</a></li>
+            <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
+                <a class="page-link" th:href="'view?page=' + (${currentPage} - 1)">Previous</a></li>
+            <li class="page-item" th:classappend="${#lists.isEmpty(employees)} ? 'disabled' : ''">
+                <a class="page-link" th:href="'view?page=' + (${currentPage} + 1)">Next</a></li>
+        </ul>
+    </nav>
 </div>
 <div th:replace="~{frags/general-frags.html :: alertToast}"></div>
 <script th:inline="javascript">
