Replaced change username and password with settings which are placed inside it.

--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -30,9 +30,7 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
                    sec:authentication="name"></a>
                 <ul class="dropdown-menu">
-                    <li><p class="dropdown-item">Change username</p></li>
-                    <li><p class="dropdown-item">Change password</p></li>
-                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
                     <li><a class="dropdown-item" href="/logout">Logout</a></li>
                 </ul>
             </div>
