Added comment for bottom script and js

--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -89,6 +89,7 @@
       </div>
     </div>
 
+    <!-- Bottom script and js -->
     <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
   </body>
 </html>
