--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -4,57 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employees</title>
-    <link th:replace="~{frags/general-frags.html :: b-css}">
-    <link th:replace="~{frags/general-frags.html :: fa-css}">
-    <script th:replace="~{frags/general-frags.html :: top-js}"></script>
-    <script th:replace="~{frags/general-frags.html :: b-js}"></script>
+    <!--  Top css  -->
+    <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+
+    <!-- Bootstrap css -->
+    <link th:replace="~{frags/general-frags.html :: bs-min-css}">
+
+    <!-- Font awesome css -->
+    <link th:replace="~{frags/general-frags.html :: fa-all-min-css}">
 </head>
 <body>
-<div th:replace="~{frags/general-frags.html :: navbar}"></div>
-<div class="container-lg">
-    <div class="mb-3">
-        <a class="btn btn-outline-primary btn-sm" href="add-employee">Add employee</a>
-        <a class="btn btn-outline-primary btn-sm" href="roles/view">Roles</a>
-    </div>
-    <div class="table-responsive">
-        <table class="table table-hover border">
-            <thead class="table-light">
-                <tr>
-                    <th>Id</th>
-                    <th>FullName</th>
-                    <th>Role</th>
-                    <th>PhoneNo</th>
-                    <th>EmailAddress</th>
-                    <th>Gender</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="emp : ${employees}">
-                    <td th:text="${emp.employeeId}"></td>
-                    <td th:text="${emp.fullName}"></td>
-                    <td th:text="${emp.role.name}"></td>
-                    <td th:text="${emp.phoneNo}"></td>
-                    <td th:text="${emp.emailAddress}"></td>
-                    <td th:text="${emp.gender}"></td>
-                    <td>
-                        <div class="dropdown" style="display:inline-block">
-                            <button class="btn btn-success btn-sm dropdown-toggle" data-bs-toggle="dropdown"
-                                    aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Update</button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Update info</a></li>
-                                <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">Update account</a></li>
-                            </ul>
-                        </div>
-                        <button class="btn btn-danger btn-sm"
-                                th:attr="onclick=|confirmDelete('delete-employee?id=${emp.employeeId}')|">
-                            <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <nav th:fragment="pageBar">
+    <!-- Header -->
+    <header th:replace="~{frags/general-frags.html :: header}"></header>
+
+    <!-- Main -->
+    <main class="container-lg">
+
+        <!-- Links -->
+        <div class="mb-3">
+            <a class="btn btn-outline-primary btn-sm" href="add-employee">Add employee</a>
+            <a class="btn btn-outline-primary btn-sm" href="roles/view">Roles</a>
+        </div>
+
+        <!-- Table -->
+        <div class="table-responsive">
+            <table class="table table-hover border">
+                <thead class="table-light">
+                    <tr>
+                        <th>Id</th>
+                        <th>FullName</th>
+                        <th>Role</th>
+                        <th>PhoneNo</th>
+                        <th>EmailAddress</th>
+                        <th>Gender</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="emp : ${employees}">
+                        <td th:text="${emp.employeeId}"></td>
+                        <td th:text="${emp.fullName}"></td>
+                        <td th:text="${emp.role.name}"></td>
+                        <td th:text="${emp.phoneNo}"></td>
+                        <td th:text="${emp.emailAddress}"></td>
+                        <td th:text="${emp.gender}"></td>
+                        <td>
+                            <div class="dropdown" style="display:inline-block">
+                                <button class="btn btn-success btn-sm dropdown-toggle" data-bs-toggle="dropdown"
+                                        aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Update</button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Update info</a></li>
+                                    <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">Update account</a></li>
+                                </ul>
+                            </div>
+                            <button class="btn btn-danger btn-sm"
+                                    th:attr="onclick=|confirmDelete('delete-employee?id=${emp.employeeId}')|">
+                                <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+
+    <!-- Pagination -->
+    <nav>
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
                 <a class="page-link" href="view?page=0">Start</a></li>
@@ -64,15 +78,11 @@
                 <a class="page-link" th:href="'view?page=' + (${currentPage} + 1)">Next</a></li>
         </ul>
     </nav>
-</div>
-<div th:replace="~{frags/general-frags.html :: alertToast}"></div>
-<script th:inline="javascript">
-/*<![CDATA[*/
-    let alertMessage = /*[[${alertMessage}]]*/
-    if (alertMessage) {
-        showAlertToast(alertMessage);
-    }
-  /*]]>*/
-</script>
+
+    <!-- Footer -->
+    <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
+
+    <!-- Bottom script and js -->
+    <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
 </body>
 </html>
